--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=hero;Trusted_Connection=True;Trust Server Certificate=true;"
+    "DBConnection": "Server=localhost; Port=3306; Database=isitech_db; Uid=root; Pwd=mounir-password;"
   },
   "Logging": {
     "LogLevel": {
